--- a/fan2foot.css
+++ b/fan2foot.css
@@ -13,6 +13,10 @@ body {
   background-image: url(pelouse.jpg);
   object-fit: cover;
 }
+hr {
+  width: 80%;
+  margin-left: 10%;
+}
 h1 {
   padding-top: 2rem;
   font-size: 3.4rem;
@@ -33,22 +37,33 @@ h1 {
   }
   100% {
     transform: rotate(220deg);
-    transform: rotateX(-81vw);
   }
 }
 .carousel-item > img {
    max-height: 500px;
    object-fit: cover;
 }
+h3 {
+  font-weight: bolder;
+  text-decoration: underline;
+}
+.card{
+  border-radius: 1.5rem;
+}
+.card > img {
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
+}
+#btn-event {
+  margin-left: 29%;
+}
+.progress {
+  background-color: white;
+}
 footer {
   background: rgb(198, 236, 249);
   padding: 1rem;
   padding-bottom: 2rem;
-}
-
-h3 {
-  font-weight: bolder;
-  text-decoration: underline;
 }
 footer > ul{
   list-style-type: none;
@@ -62,20 +77,26 @@ footer > ul{
 .copyright {
   list-style-type: none;
 }
-hr {
-  width: 80%;
-  margin-left: 10%;
-
+.balls-img-footer-left {
+  width: 60px;
+  float: left;
+  animation: footer-anim 6s ease-out infinite;
 }
-.card{
-  border-radius: 1.5rem;
+.balls-img-footer-right {
+  width: 60px;
+  float: right;
+  animation: footer-anim 6s ease-out infinite;
 }
-.card > img {
-  border-top-left-radius: 1.5rem;
-  border-top-right-radius: 1.5rem;
-}
-#btn-event {
-  margin-left: 29%;
+@keyframes footer-anim {
+  0% {
+    transform: rotate(180deg);
+  }
+  50% {
+    transform: translatey(-20rem);
+  }
+  100% {
+    transform: rotate(180deg);
+  }
 }
 /*----------------responsive--------------------*/
 @media screen and (min-width:768px) {
@@ -92,5 +113,16 @@ hr {
   }
   #btn-event {
     margin-left: 42%;
+  }
+  @keyframes footer-anim {
+    0% {
+      transform: rotate(180deg);
+    }
+    50% {
+      transform: translatey(-12rem);
+    }
+    100% {
+      transform: rotate(180deg);
+    }
   }
 }
