--- a/style.css
+++ b/style.css
@@ -103,13 +103,35 @@ footer > ul{
   display: flex;
   flex-wrap: wrap;
 }
-.gsap {
+.navbar-nav {
   display: flex;
+  justify-content: flex-end;
   width: 100%;
-  overflow: hidden;
+}
+.form-group {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.container > .card {
+  width: 100%;
+}
+.container button {
+  width: 200px;
 }
 .ball {
   width: 90px;
+}
+.progress {
+  width: 75%;
+  margin-left: auto;
+  margin-right: auto;
 }
 @keyframes footer-anim {
   0% {
@@ -139,9 +161,6 @@ footer > ul{
   }
   #btn-event {
     margin-left: 42%;
-  }
-  .gsap {
-    display: none;
   }
   @keyframes footer-anim {
     0% {
